# whatlog

./: .gitignore  CMakeLists.txt  vcpkg.json  whatlog-config.cmake
include/whatlog/: logger.hpp
src/: logger.cpp
